fix horizontal scroll

--- a/style/styles.css
+++ b/style/styles.css
@@ -26,8 +26,9 @@
     margin: 0;
 }
 
-body {
-    width: 100%;
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 header {
